Cosmetic changes on index and app component

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
   var options = new primitives.famdiagram.Config();
   
               var items = [
-                  { id: 1, spouses: [2], title: "Thomas Williams", label: "Thomas Williams", description: "1, 1st husband", image: "demo/images/photos/t.png" },
-                  { id: 2, title: "Mary Spencer", label: "Mary Spencer", description: "2, The Mary",image: "demo/images/photos/m.png" },
-                  { id: 3, spouses: [2], title: "David Kirby", label: "David Kirby", description: "3, 2nd Husband", image: "demo/images/photos/d.png" },
-                  { id: 4, parents: [1, 2], title: "Brad Williams", label: "Brad Williams", description: "4, 1st son", image: "demo/images/photos/b.png" },
-                  { id: 5, parents: [2, 3], title: "Mike Kirby", label: "Mike Kirby", description: "5, 2nd son, having 2 spouses", image: "demo/images/photos/m.png"}
+                  { id: 1, spouses: [2], title: "Thomas Williams", label: "Thomas Williams", description: "1, 1st husband", image: "" },
+                  { id: 2, title: "Mary Spencer", label: "Mary Spencer", description: "2, The Mary",image: "" },
+                  { id: 3, spouses: [2], title: "David Kirby", label: "David Kirby", description: "3, 2nd Husband", image: "" },
+                  { id: 4, parents: [1, 2], title: "Brad Williams", label: "Brad Williams", description: "4, 1st son", image: "" },
+                  { id: 5, parents: [2, 3], title: "Mike Kirby", label: "Mike Kirby", description: "5, 2nd son, having 2 spouses", image: ""}
               ];
   
               options.items = items;
@@ -52,18 +52,6 @@
 
 
 </script>
-
-
-
-
-  <button>Jquery Button</button>
-  <p id="demo">A Paragraph.</p>
-  <button type="button" onclick="myFunction()">Try it</button>
-  
-
-
-
-  
   <p id="demo2">A Paragraph.</p>
   <button type="button" onclick="myFunction2()">Initliaze Button</button>
 </body>
