Cosmetic form created.

--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,15 @@ options.items = items2;
   
 
 
+  <form id="frm1" action="">
+    ID: <input type="text" name="fname" placeholder="Enter a unique ID"><br>
+    Parents: <input type="text" name="fname" placeholder="Optional field"><br>    
+    Title: <input type="text" name="lname" placeholder="Enter a title"><br>
+    Description: <input type="text" name="fname" placeholder="Enter a description"><br>
+    <input type="submit" value="Submit">
+  </form> 
+
+
   
   <button type="button" onclick="additem()">New Array Tester Type of deal. Button</button>
   
