--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,16 @@
 </script>
 
 <script>
-function additem()
-{
+function additem() //This is for testing form adding. Not for anything else. There is nothing in here thats is important or unique. 
+{                 //Array pusing example in the notepad too. Just use this one for getting values the form.
+
+//We need to declare a array variable here. This one just has a weird string and it won't let us access to anything.
+var x = document.getElementById("frm1");
+    var text = "";
+    var i;
+    for (i = 0; i < x.length ;i++) {
+        text += x.elements[i].value + "<br>";
+    }
   var options = new primitives.famdiagram.Config();
 
   var items2 = [
@@ -55,9 +63,9 @@ function additem()
   {id: 6, parents: [ 1,5], title: "Underling of Mike Kirby", label: "", description: "Area Manager", image: ""}
 ];
 
-items2.push({id:7, parents:[1, 2],title:"New one added.", label: "General Manager", description: "General Manager", image: "" });
+items2.push({id:7, parents:[1, 2],spouse:[],title:"New one added.", label: "General Manager", description: "General Manager", image: "" }); //Form'dan özellik alması için.
 
-options.items = items2;
+              options.items = items2;
               options.cursorItem = 2;
               options.linesWidth = 1;
               options.linesColor = "black";
@@ -70,7 +78,9 @@ options.items = items2;
               options.lineItemsInterval = 10;
   
               $("#basicdiagram").famDiagram(options);
-
+var consoletester;
+consoletester =frm1.elements["IDname"].value;
+console.log(consoletester);
 }
 
 
@@ -82,10 +92,10 @@ options.items = items2;
 
 
   <form id="frm1" action="">
-    ID: <input type="text" name="fname" placeholder="Enter a unique ID"><br>
-    Parents: <input type="text" name="fname" placeholder="Optional field"><br>    
-    Title: <input type="text" name="lname" placeholder="Enter a title"><br>
-    Description: <input type="text" name="fname" placeholder="Enter a description"><br>
+    ID: <input type="text" name="IDname" placeholder="Enter a unique ID"><br>
+    Parents: <input type="text" name="Parentsname" placeholder="Optional field"><br>    
+    Title: <input type="text" name="Titlename" placeholder="Enter a title"><br>
+    Description: <input type="text" name="Descriptionname" placeholder="Enter a description"><br>
     <input type="submit" value="Submit">
   </form> 
 
