Multiple superiors adding fixed

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,9 @@ console.log(array);
 console.log("Our untouched array is below,hand entered:");
 console.log(items[1].parents);
 
-items2.push({id:IDvar, parents:[array],spouse:[Spovar],title:[Titvar], label: "", description: Descvar +" Personel ID:"+ IDvar, image: "" }); //Form'dan özellik alması için.
+// var soleitem=[ new primitives.famdiagram.ItemConfig({ id:IDvar,parents:})];
+
+items2.push({id:IDvar, parents:array,spouse:[Spovar],title:[Titvar], label: "", description: Descvar +" Personel ID:"+ IDvar, image: "" }); //Form'dan özellik alması için.
 
               options.items = items2;
               options.cursorItem = 2;
