Cosmetic changes on index.html

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@ items2.push({id:IDvar, parents:array,spouse:[Spovar],title:[Titvar], label: "", 
     Description: <input type="text" name="Descriptionname" class="form-control input-md"placeholder="Enter a description">
   </div>
   <br>
-    <button type="button" class="form-control input-md" onclick="myFunction2()">Initliaze Button</button>
+    <button type="button" class="form-control input-md" onclick="myFunction2()">Initiliaze Button</button>
     <button type="button" class="form-control input-md" onclick="additem()">Add A New Member </button>
     <button type="button" class="form-control input-md" onclick="additem2()">Update A Member </button>
     
